# kitchen

./: .gitignore  LICENSE.md  README.md  kitchen.code-workspace  pyproject.toml  shell.nix
kitchen/: config.py  demo.py  kitchen.py  kitchen.yaml
tests/: config_8_robots.yaml  config_bad.yaml  config_good.json  test_config.py  test_kitchen.py  test_services.py
